--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -9,10 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include ="Serilog.AspNetCore" Version ="9.0.0" />
   </ItemGroup>
 
 </Project>
