managing the URL's and API endpoints

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,13 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "ConnectionStrings": {
+        "NodeJs_API": "http://localhost:3000",
+        "Frontend": "https://localhost:5002"
+    },
+    "API_endpoints": {
+        "getImageURL": "/api/data",
+        "getPDFURL": "/api/pdf"
+    },
     "AllowedHosts": "*"
 }
