--- a/.github/workflows/master_postwall.yml
+++ b/.github/workflows/master_postwall.yml
@@ -59,9 +59,10 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'postwall'
+          app-name: 'postwall-backend'
           slot-name: 'Production'
           package: .
 
           
+
 
