--- a/.github/workflows/master_postwall.yml
+++ b/.github/workflows/master_postwall.yml
@@ -59,10 +59,11 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'postwall-backend'
+          app-name: 'postwall-backend-service'
           slot-name: 'Production'
           package: .
 
           
+
 
 
