fix local testing

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -15,9 +15,9 @@
         "NodeJs_API": "http://localhost:3000",
         "Frontend": "https://localhost:5002"
     },
+    "AllowedHosts": "*",
     "API_endpoints": {
-        "getImageURL": "/api/data",
-        "getPDFURL": "/api/pdf"
-    },
-    "AllowedHosts": "*"
+        "getImageURL": "/api/data/",
+        "getPDFURL": "/api/pdf/"
+    }
 }
