add aws3 dependency, create blob uploading, retrieving and handless the correct serviceTypes

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -19,5 +19,11 @@
     "API_endpoints": {
         "getImageURL": "/api/data/",
         "getPDFURL": "/api/pdf/"
+    },
+    "CloudFlareConnectionStrings": {
+        "AccountID": "",
+        "AccessKeyID": "",
+        "SecretAccessKeyID": "",
+        "BucketName": ""
     }
 }
