create feedback class and database

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -3,7 +3,8 @@
         "ConnectionString": "",
         "Database": "Postwall",
         "FlyerCollection": "Flyers",
-        "FlyerPDFCollection": "FlyerPDF"
+        "FlyerPDFCollection": "FlyerPDF",
+        "FeedbackCollection": "Feedback"
     },
     "Logging": {
         "LogLevel": {
